--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     <ul id="product-reviews-list" class="list-unstyled" style="font: small"></ul>
                 </div>
                 <div class="col-md-6">
-                    <h6 style="font-size: small;">Leave a comment:</h6>
+                    <h6 style="font-size: medium;">Leave a comment:</h6>
                     <div id="add-review-form" class="mt-3">
                         <form id="review-form" class="form-centered">
                             <input type="hidden" id="review-product-id">
