--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         align-items: center;
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         text-align: center;
+        font-size: medium;
 
     }
 
@@ -466,7 +467,7 @@
                     aria-label="Toggle navigation" style="background-color: #fff;">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-brand ml-2" style="color: #fff;">
+                <div class="navbar-brand ml-2" style="color: #fff;" >
                     <img src="images/icon.png" alt="Logo">
                     JOLLY UNIFORMS
                 </div>
