--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
     .custom-navbar-bg {
-        background-color: rgb(220, 221, 221);
+        bbackground-color: rgb(12, 12, 48);
     }
 
     .navbar-brand {
@@ -227,7 +227,7 @@
 
     .navbar-toggler {
         display: block;
-
+        background-color: rgb(12, 12, 48);
     
     }
     #product-specs li {
@@ -278,6 +278,7 @@
         .navbar-brand {
             justify-content: start;
             width: 100%;
+            background-color: rgb(12, 12, 48);
 
         }
 
@@ -508,10 +509,11 @@
                     <div class="cart-container">
                         <a class="nav-item nav-link" href="#" data-toggle="modal" data-target="#cartModal" style="padding-right: 20px;">
                             <i class="cart-icon">🛒</i>
+                            <div class="cart-counter" id="cart-counter">0</div> <!-- Ensure the counter is inside the anchor tag -->
                         </a>
-                        <div class="cart-counter" id="cart-counter">0</div>
                     </div>
                 </div>
+                
             </div>
         </div>
 
