--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/icon.png">
 </head>
+
 <style>
     .cart-container {
             position: relative;
@@ -493,7 +494,7 @@
                             <div class="dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                                 <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
                                     aria-expanded="false" style="color: #fff;">
-                                    Our Branches
+                                    Our Outlets
                                 </a>
                                 <div class="dropdown-menu" id="dropdownMenu" aria-labelledby="navbarDropdown"
                                     style="color: #fff;">
