--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                 </div>
                 <div class="navbar-nav ml-auto">
                     <div class="cart-container">
-                        <a class="nav-item nav-link" href="#" data-toggle="modal" data-target="#cartModal" style="padding-right: 20px;">
+                        <a class="nav-item nav-link" href="" data-toggle="modal" data-target="#cartModal" style="padding-right: 20px;">
                             <i class="cart-icon">🛒</i>
                             <div class="cart-counter" id="cart-counter">0</div> <!-- Ensure the counter is inside the anchor tag -->
                         </a>
