--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                             <div class="dropdown" onmouseover="showDropdown()" onmouseout="hideDropdown()">
                                 <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
                                     aria-expanded="false" style="color: #fff;">
-                                    Our Outlets
+                                    Our Branches
                                 </a>
                                 <div class="dropdown-menu" id="dropdownMenu" aria-labelledby="navbarDropdown"
                                     style="color: #fff;">
