--- a/index.html
+++ b/index.html
@@ -467,6 +467,35 @@
         font-size: 14px;
         font-weight: bold;
     }
+
+    .d-flex {
+    display: flex;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.mr-3 {
+    margin-right: 1rem;
+}
+
+.ml-3 {
+    margin-left: 1rem;
+}
+
+.media-body p {
+    margin: 0.25rem 0;
+}
+
+.delete-item-button {
+    cursor: pointer;
+}
+
 </style>
 
 <body>
