--- a/index.html
+++ b/index.html
@@ -472,29 +472,49 @@
     display: flex;
 }
 
+.d-flex {
+  display: flex;
+}
+
 .align-items-center {
-    align-items: center;
+  align-items: center;
 }
 
 .flex-grow-1 {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .mr-3 {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 
-.ml-3 {
-    margin-left: 1rem;
+.ml-auto {
+  margin-left: auto;
+}
+
+.cart-item {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e0e0e0; /* Light grey divider */
+}
+
+.cart-item:last-child {
+  border-bottom: none;
 }
 
 .media-body p {
-    margin: 0.25rem 0;
+  margin: 0.25rem 0;
 }
 
 .delete-item-button {
-    cursor: pointer;
+  cursor: pointer;
 }
+
+.item-divider {
+  margin-top: 1rem;
+  border: none;
+  border-top: 1px solid #e0e0e0; /* Light grey divider */
+}
+
 
 </style>
 
@@ -658,11 +678,11 @@
 
     </div>
  <!-- Cart Modal -->
- <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+ <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true" style="align-self: flex-end;">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="cartModalLabel">Your Cart</h5>
+                <h5 class="modal-title" id="cartModalLabel">Shopping Cart</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -671,7 +691,7 @@
                 <ul id="cart-items-list" class="list-unstyled"></ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        
                 <button type="button" class="btn btn-primary" id="checkout-button">Checkout</button>
             </div>
         </div>
