--- a/index.html
+++ b/index.html
@@ -94,14 +94,29 @@
     <div id="main-content"
         style="padding-top: 20px;  font-size: medium; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
         class="container mt-5 hidden">
-        <h5>School Uniform</h5>
+          <!-- Breadcrumb Navigation -->
+    <nav aria-label="breadcrumb">
+        <ul class="breadcrumb">
+            <li><a href="index.html">Home</a></li>
+            <li>Products</a></li>
+        </ul>
+    </nav>
+        <h5>School Uniforms</h5>
         <!-- Product Display Section -->
         <div id="product-list" class="row mt-4"></div>
     </div>
+<!-- New Product Details Container -->
+<div id="product-details-container" class="container hidden" style="margin-top: 50px;">
+    <!-- Breadcrumb Navigation -->
+    <nav aria-label="breadcrumb">
+        <ul class="breadcrumb">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Products</a></li>
+            <li>Product Details</li>
+        </ul>
+    </nav>
 
-   <!-- New Product Details Container -->
-<div id="product-details-container" class="container hidden" style="margin-top: 30px;">
-    <div class="row" style="padding-top: 20px; font-size: medium; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+    <div class="row" style="padding-top: 10px; font-size: medium; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
         <!-- Product Image -->
         <div id="product-image-container" class="col-md-6 text-center">
             <img id="product-image" src="" class="img-fluid" alt="Product Image" style="max-height: 250px;">
@@ -182,7 +197,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="cartModalLabel">Shopping Cart</h5>
+                <h5 class="modal-title" id="cartModalLabel">Cart</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -311,7 +326,7 @@
                     <h6>Contact Us</h6>
                     <p>Tengecha Lane, Kericho, Kenya</p>
                     <p>Email: info@jollyuniforms.com</p>
-                    <p>Phone: +1234567890</p>
+                    <p>Phone: +254 757 024 304</p>
                 </div>
             </div>
         </div>
