--- a/index.html
+++ b/index.html
@@ -308,13 +308,13 @@
     <footer id="footer" class="footer custom-bg-blue hidden">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3 mb-4">
                     <h6>About</h6>
                     <ul>
                         <p>We are one stop all uniforms store with over a decade experience in service delivery</p>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3 mb-4">
                     <h6>Our Branches/ Stores</h6>
                     <ul>
                         <li><a href="#">Roret Branch</a></li>
@@ -322,11 +322,21 @@
                         <li><a href="index.html">Kericho Town Branch</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3 mb-4">
                     <h6>Contact Us</h6>
                     <p>Tengecha Lane, Kericho, Kenya</p>
                     <p>Email: info@jollyuniforms.com</p>
                     <p>Phone: +254 757 024 304</p>
+                </div>
+                 <!-- Social Media Section -->
+                 <div class="col-md-3 mb-4">
+                    <h6>Follow Us</h6>
+                    <div class="social-links">
+                        <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                        <!-- <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
+                    </div>
                 </div>
             </div>
         </div>
