--- a/index.html
+++ b/index.html
@@ -325,16 +325,15 @@
                 <div class="col-md-3 mb-4">
                     <h6>Contact Us</h6>
                     <p>Tengecha Lane, Kericho, Kenya</p>
-                    <p>Email: info@jollyuniforms.com</p>
+                    <p>Email:  jollysuper97@yahoo.com</p>
                     <p>Phone: +254 757 024 304</p>
                 </div>
                  <!-- Social Media Section -->
                  <div class="col-md-3 mb-4">
                     <h6>Follow Us</h6>
                     <div class="social-links">
-                        <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61558529633976" class="btn btn-outline-light btn-social" aria-label="Follow us on Facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
+                        <a href="https://www.instagram.com/jollysuperuniforms?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="btn btn-outline-light btn-social" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i> Instagram</a>
                         <!-- <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
                     </div>
                 </div>
