--- a/index.html
+++ b/index.html
@@ -90,18 +90,53 @@
     </nav>
 
     <!-- Main Content -->
-
+    <div class="admin-panel mt-5 pt-3">
+        <div id="carouselExampleIndicators" class="carousel slide style="padding-top: 20px; " data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://www.booktopia.com.au/images/assets/landing-pages/ebooks/etext-2023-ebooks-banner.jpg" class="d-block w-100" alt="Banner 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.booktopia.com.au/images/assets/landing-pages/ebooks/kobo-libra-2024-homepage.jpg" class="d-block w-100" alt="Banner 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.booktopia.com.au/images/assets/landing-pages/ebooks/kobo-plus-homepage-banner.jpg" class="d-block w-100" alt="Banner 3">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div class="container">
+            <!-- Container for the books -->
+            <div class="category">
+                <div class="books-container row">
+                    <!-- Books will be injected here by JavaScript -->
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="main-content"
-        style="padding-top: 20px;  font-size: medium; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
+         font-size: medium; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
         class="container mt-5 hidden">
           <!-- Breadcrumb Navigation -->
     <nav aria-label="breadcrumb">
         <ul class="breadcrumb">
             <li><a href="index.html">Home</a></li>
-            <li>Products</a></li>
+            <li>School Uniforms</a></li>
         </ul>
     </nav>
-        <h5>School Uniforms</h5>
+        <!-- <h5>School Uniforms</h5> -->
         <!-- Product Display Section -->
         <div id="product-list" class="row mt-4"></div>
     </div>
