--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://www.booktopia.com.au/images/assets/landing-pages/ebooks/etext-2023-ebooks-banner.jpg" class="d-block w-100" alt="Banner 1">
+                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.booktopia.com.au/images/assets/landing-pages/ebooks/kobo-libra-2024-homepage.jpg" class="d-block w-100" alt="Banner 2">
+                    <img src="images/ban2.jpg" class="d-block w-100" alt="Banner 2">
                 </div>
                 <div class="carousel-item">
                     <img src="https://www.booktopia.com.au/images/assets/landing-pages/ebooks/kobo-plus-homepage-banner.jpg" class="d-block w-100" alt="Banner 3">
