--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <img src="images/ban2.jpg" class="d-block w-100" alt="Banner 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.booktopia.com.au/images/assets/landing-pages/ebooks/kobo-plus-homepage-banner.jpg" class="d-block w-100" alt="Banner 3">
+                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 3">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
